# aircraft-dataset-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CONTRIBUTING.md  README.md  ROTATION_EXPANSION_HANDOFF.md  environment.yml  generate_40k_with_annotations_FIXED.py  generate_obb_dataset.py  generate_samples.py  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt  run_tests.py  setup.py
.github/workflows/: tests.yml
aircraft_toolkit/: __init__.py  config.py
aircraft_toolkit/core/: __init__.py  dataset_2d.py  dataset_3d.py
aircraft_toolkit/models/: __init__.py  military.py
aircraft_toolkit/providers/: __init__.py  base.py  basic.py  headless_provider.py  pyvista_models_provider.py  registry.py  tigl_provider.py
aircraft_toolkit/providers/cpacs_templates/: f15_eagle.cpacs.xml
aircraft_toolkit/utils/: __init__.py  logging.py  validation.py
docs/: architecture.md
example_scripts/: generate_examples.py
examples/: basic_2d_generation.py  basic_3d_generation.py  cadquery_aircraft_models.py  improved_3d_examples.py  integration_comparison.py  tigl_test_generation.py
models/aircraft/: README.md
pose-estimation-vit/pe-vit-data/data/aircraft_3d_dataset_c130_hq/: test_3d_annotations.json  val_3d_annotations.json
scripts/: README.md  batch_dataset_generator_40k_with_annotations.py
tests/: __init__.py  test_aircraft_models.py  test_aircraft_toolkit.py  test_dataset_2d.py  test_providers.py  test_rotation_ranges.py
